# cellmat

./: README.md  compute_cosine_similarity_demo.ipynb  environment.yml  pyproject.toml
examples/: matched_cells.ipynb  stability_analysis.ipynb
src/cellmat/: __init__.py  comparison.py  methods.py  utils.py
